Fix the position for visibiility hidden which took up space

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ label[for="name"],
 label[for="email"],
 label[for="message"] {
   visibility: hidden;
+  position: absolute;
 }
 
 @media screen and (min-width: 375px) {
@@ -191,7 +192,6 @@ label[for="message"] {
     justify-content: center;
     text-decoration: none;
     border: transparent;
-    background: #963903;
     font-size: 17px;
     text-transform: capitalize;
     font-family: "Inter", sans-serif;
@@ -235,7 +235,7 @@ label[for="message"] {
   }
 
   .see-project a:link,
-  .see-project:visited {
+  .see-project a:visited {
     background-color: #963903;
     color: #fff;
   }
